--- a/.github/markscribe.yml
+++ b/.github/markscribe.yml
@@ -2,6 +2,9 @@ name: markscribe
 
 on:
   push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
