--- a/.github/workflows/markscribe.yml
+++ b/.github/workflows/markscribe.yml
@@ -28,6 +28,6 @@ jobs:
       - name: Commit README
         uses: stefanzweifel/git-auto-commit-action@v4
         env:
-          GITHUB_TOKEN: ${{ secrets.MARKSCRIBE_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
         with:
           commit_message: 'markscribe: update README.md'
