--- a/.github/workflows/markscribe.yml
+++ b/.github/workflows/markscribe.yml
@@ -13,9 +13,12 @@ jobs:
   markscribe:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Generate README
         uses: muesli/readme-scribe@master
